--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 <button onclick="buttonWarning()" class="btn btn-outline-secondary ms-5 btn btn-warning"
                     type="button">Button</button>
             </div>
+            <div id="players-div" class="players-div">
+
+
+
+            </div>
         </div>
         <div class="right-side col-md-6">
             <h1>player photos</h1>
