--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="container ">
+    <div class="maincontainer ">
         <div class="left-side col-md-6">
             <h1>search button</h1>
             <div class="input-group">
@@ -26,6 +26,7 @@
                 <button onclick="buttonWarning()" class="btn btn-outline-secondary ms-5 btn btn-warning"
                     type="button">Button</button>
             </div>
+            <img id="spinner" src="photos/spinner.png" alt="">
             <div id="players-div" class="players-div">
 
 
@@ -34,12 +35,15 @@
         </div>
         <div class="right-side col-md-6">
             <h1>player photos</h1>
+            <div id="objcet-detail" class="object-container">
+                <img id="male" class="w-25" src="photos/barcelona.jpeg" alt="">
+                <img id="female" class="w-25" src="photos/femal.jpg" alt="">
+            </div>
+
         </div>
 
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+
     <!-- add script -->
 
     <script src="player.js"></script>
